--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     Fore more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/path/">
+  <base href="/custom_portfolio/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -102,7 +102,7 @@
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('flutter-first-frame', function () {
-        navigator.serviceWorker.register('flutter_service_worker.js?v=3579486140');
+        navigator.serviceWorker.register('flutter_service_worker.js?v=2144887828');
       });
     }
   </script>
